# DECstation2040

./: .gitmodules  LICENSE  README.md
doc/: build_log.txt
doc/bom/: emu_brd_v1.5.xlsx  emu_brd_v2.1.xlsx
emu_brd_rev_1.5/: ECS-120-20-23B-TR.kicad_sym  TXS0108ERGY.kicad_sym  W25Q80.kicad_sym  emu_brd-cache.lib  emu_brd.kicad_pcb  emu_brd.kicad_pcb-bak  emu_brd.kicad_prl  emu_brd.kicad_pro  emu_brd.kicad_sch  emu_brd.sch  fp-info-cache  fp-lib-table
emu_brd_rev_1.5/emu_brd.pretty/: ABRACON_ARJM11D7-009-AB-EW2.kicad_mod  NVT4858HKZ.kicad_mod  PW14-L.kicad_mod  PW14-M.kicad_mod  PW14.kicad_mod  SON40P200X200X80-11N.kicad_mod  TXV0106BQBR.kicad_mod  WIN_ZP-8_WIN-M.kicad_mod  WIZNET_RB1-125BAG1A.kicad_mod  WLCSP20_NVT4857_NXP.kicad_mod  XTAL_ECS-120-20-23B-TR.kicad_mod
emu_brd_rev_1.5/emu_brd.step/: ECS-120-20-23B-TR.step
emu_brd_rev_1.5/emu_brd_rev_1.5/: emu_brd-B_Cu.gbl  emu_brd-B_Mask.gbs  emu_brd-B_Paste.gbp  emu_brd-B_Silkscreen.gbo  emu_brd-Edge_Cuts.gm1  emu_brd-F_Cu.gtl  emu_brd-F_Mask.gts  emu_brd-F_Paste.gtp  emu_brd-F_Silkscreen.gto  emu_brd-NPTH-drl_map.gbr  emu_brd-NPTH.drl  emu_brd-PTH-drl_map.gbr  emu_brd-PTH.drl
emu_brd_rev_2.1/: PCB-USB-C.lib  RB1-125BAG1A.kicad_sym  TLV751180330PDSQR.lib  TXV0106BQBR.lib  emu_brd.kicad_pcb  emu_brd.kicad_prl  emu_brd.kicad_pro  emu_brd.kicad_sch  emu_brd.pro  local.kicad_sym  sym-lib-table
emu_brd_rev_2.1/emu_brd.pretty/: BGA25C100P5X5_800X600X120N.kicad_mod  CONN_L77HDE15SD1CH4FVGA_AMP.kicad_mod  PCB-USB-C.kicad_mod  RGY20_3P05X2P05.kicad_mod  WIN_ZP-8_WIN-L.kicad_mod  WIN_ZP-8_WIN.kicad_mod  WLCSP20_NVT4857_NXP-L.kicad_mod  WLCSP20_NVT4857_NXP-M.kicad_mod  screen_shot_big.kicad_mod
emu_brd_rev_2.1/emu_brd.step/: RB1-125BAG1A.step
emu_brd_rev_2.1/emu_brd_rev_2.1/: emu_brd-B_Cu.gbl  emu_brd-B_Mask.gbs  emu_brd-B_Paste.gbp  emu_brd-B_Silkscreen.gbo  emu_brd-Edge_Cuts.gm1  emu_brd-F_Cu.gtl  emu_brd-F_Mask.gts  emu_brd-F_Paste.gtp  emu_brd-F_Silkscreen.gto  emu_brd-NPTH-drl_map.gbr  emu_brd-NPTH.drl  emu_brd-PTH-drl_map.gbr  emu_brd-PTH.drl
sw/: program.sh  source_this  sram.sh  start_cmsis.sh
sw/blink_bringup/: CMakeLists.txt  boot_stage2  build.sh  program.sh  sram.sh
sw/blink_bringup/src/: CMakeLists.txt  blink.c
sw/psram/: CMakeLists.txt  build.sh  cl_sram.sh  eth_sram.sh  fb_flash.sh  fb_sram.sh  fbm_flash.sh  fbm_sram.sh  mt_flash.sh  mt_sram.sh  pp_sram.sh  rv_sram.sh  sd_sram.sh  um_flash.sh  um_sram.sh
sw/psram/apps/: CMakeLists.txt
sw/psram/apps/command_line/: CMakeLists.txt  main.cpp
sw/psram/apps/command_line/config/: dev_brd.hw_config.c  exp_mod_A_SDIO.hw_config.c  exp_mod_A_SPI.hw_config.c  hw_config.c  maker_pi_pico.hw_config.c  protoboard.hw_config.c  thing_plus.hw_config.c
sw/psram/apps/command_line/include/: command.h
sw/psram/apps/command_line/linker/: memmap.ld
sw/psram/apps/command_line/src/: command.cpp  data_log_demo.c
sw/psram/apps/command_line/tests/: CreateAndVerifyExampleFiles.c  app4-IO_module_function_checker.c  bench.c  big_file_test.c  ff_stdio_tests_with_cwd.c  simple.c
sw/psram/apps/fb_mem_test/: CMakeLists.txt  main.c
sw/psram/apps/fb_mono/: CMakeLists.txt  fb_mono.c  fb_mono.h  fb_mono.pio  main.c
sw/psram/apps/fb_test/: CMakeLists.txt  main.c
sw/psram/apps/linuxcard/: CMakeLists.txt
sw/psram/apps/linuxcard/src/: CMakeLists.txt  hypercall.h
sw/psram/apps/linuxcard/src/emu/: .gitignore  CMakeLists.txt  CortexEmuCpu.h  Makefile  atsamd.h  cpu.c  cpu.h  cpuAsm.S  cpuM0.inc  crt_CortexEmu.c  decBus.c  decBus.h  decMouse.c  decPointingDevice.h  decTablet.c  ds1287.c  ds1287.h  ds1287CortexEmu.c  ds1287RP2040.c  dz11.c  dz11.h  esar.c  esar.h  fpu.c  fpu.h  graphics.h  graphicsRP2040.c  if_lereg.h  inputSDL.c  inputSDL.h  lance.c  lance.h  loader.inc  main.c  main_uc.c  main_uc.c_orig  mem.c  mem.h  printf.c  printf.h  (+31 more)
sw/psram/apps/mem_test/: CMakeLists.txt  main.c
sw/psram/apps/picoprobe/: CMakeLists.txt
sw/psram/apps/picoprobe/CMSIS_5/CMSIS/DSP/Testing/TestScripts/: ParseTrace.py
sw/psram/apps/picoprobe/include/: #board_custom_config.h#  board_custom_config.h
sw/psram/apps/picoprobe/src/: picoprobe_config.h
sw/psram/boot_stage2/: #CMakefile.txt#  #boot2_w25q080_mod.S#  .#CMakefile.txt  boot2_generic_03h_mod.S  boot2_usb_blinky.S  boot2_w25q080_mod.S  boot2_w25x10cl_mod.S
sw/psram/libfbh/: CMakeLists.txt  fb_mono.c  fb_mono.h  fb_mono.pio  vga_timing.h
sw/psram/libhyperram/: CMakeLists.txt  hyperram.c  hyperram.h  hyperram.pio
